Devtools: Fix popover arrow alignment issues
This change fixes a variety of issues to do with popover arrow alignment.
- Popover alignment should be agnostic to arrow offset changes
- Inline style was never reset between changes
- Regressions from removing use of a border image

BUG=469778

Review URL: https://codereview.chromium.org/1056643003

git-svn-id: svn://svn.chromium.org/blink/trunk@193445 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/popover.css
+++ b/front_end/popover.css
@@ -32,7 +32,6 @@
     background-image: url(Images/popoverArrows.png);
     width: 19px;
     height: 19px;
-    margin-left: 15px;
     margin-top: -19px;
     top: 0;
     left: 0;
